<resources>
    <string name="app_name">BloodBank</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_activity1">MainActivity1</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="log">Log In</string>
    <string name="signup">To sign up click here</string>
    <string name="sign">Sign Up</string>
    <string name="nw">Donor</string>
    <string name="src">Search Donor</string>
    <string name="logout">LogOut</string>
    <string name="study">Details</string>
    <string name="guideafter">Guidelines after</string>
    <string name="guidebefore">Guidelines before</string>
    <string name="needs">Eligibility requirements</string>
    <string name="water">Water:</string>
    <string name="watertxt">Drink extra fluids for the next day or two. </string>
    <string name="heavy">Heavy works:</string>
    <string name="heavytxt">Avoid strenuous physical activity or heavy lifting for the next five hours.</string>
    <string name="bandage">Bandage:</string>
    <string name="bandagetxt">Keep the bandage on your arm and dry for five hours.If you have bleeding after removing the bandage, put pressure on the site and raise your arm until the bleeding stops.</string>
    <string name="sun">Sun:</string>
    <string name="suntxt">dont go out in sun,
      dont stand for long</string>
    <string name="bath">Bath:</string>
    <string name="bathtxt">Avoid hotbath
           after donation</string>
    <string name="watertxt2">           Drink 500ml of water immediately before you give blood.  It’s also important to ensure that you are well hydrated in the days leading up to your donation. </string>
    <string name="food">Foods:</string>
    <string name="foodtxt">Eating regularly before donating will help to keep your blood sugar levels stable.
Ensuring that your diet contains foods rich in iron .</string>
    <string name="exersice">Exersice:</string>
    <string name="exersicetxt">Avoid doing any vigorous exercise or heavy lifting the day of your donation – both before and after you’ve given blood.</string>
    <string name="sleep">Sleep:</string>
    <string name="sleeptxt">We recommend that you have a full night’s sleep of between 7 to 9 hours the night before your donation.</string>
    <string name="txtlog">To BACK Press Here</string>
    <string name="cancer">Cancer:</string>
    <string name="cantxt">For patients including
        childrens with cancer </string>
    <string name="title">To be eligible to donate whole blood, plasma or platelets, you must be:</string>
    <string name="titletxt">-In good health.</string>
    <string name="who">Who:</string>
    <string name="whotxt">-At least 16 or 17 years old, depending on the law in your state. Some states allow legal minors to donate with parent permission. While there\'s no legal upper age limit</string>
    <string name="who2">Needs:</string>
    <string name="who2txt">-At least 110 pounds.</string>
    <string name="benefits">Benefits:</string>
    <string name="who3txt">-Able to pass the physical and health-history assessments.</string>
    <string name="list">Press any name to go his profile</string>

    <string name="title_activity_main_activity3">MainActivity3</string>
    <string name="title_activity_main_activity4">MainActivity4</string>
    <string name="title_activity_main_activity5">MainActivity5</string>
    <string name="title_activity_main_activity6">MainActivity6</string>

    <string-array name="cities">
        <item>Governorate</item>
        <item>cairo</item>
        <item>giza</item>
        <item>kalubia</item>
        <item>alex</item>
        <item>ismailia</item>
        <item>aswan</item>
        <item>asyut</item>
        <item>luxor</item>
        <item>red Sea</item>
        <item>beheira</item>
        <item>beni Suef</item>
        <item>port Said</item>
        <item>south Sinai</item>
        <item>dakahlia</item>
        <item>damietta</item>
        <item>sohag</item>
        <item>suez</item>
        <item>sharkia</item>
        <item>north Sinai</item>
        <item>gharbia</item>
        <item>fayoum</item>
        <item>qena</item>
        <item>kafr Al sheikh</item>
        <item>matruh</item>
        <item>menoufia</item>
        <item>minya</item>
        <item>new Valley</item>
    </string-array>
    <string-array name="blood">
        <item>Blood</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>

    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_profile2">Profile2</string>
    <string name="title_activity_main_activity7">MainActivity7</string>
    <string name="title_activity_main_activity8">MainActivity8</string>
    <string name="title_activity_main_activity9">MainActivity9</string>
    <string name="title_activity_main_activity10">MainActivity10</string>

</resources>
