<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile1" >

    <Space
        android:id="@+id/Space1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/profile1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Before_don" >
    </Space>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_x="69dp"
        android:layout_y="14dp"
        android:text="@string/water"
        android:textColor="#a60808" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="70dp"
        android:layout_y="32dp"
        android:text="@string/watertxt2"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="94dp"
        android:layout_marginTop="14dp"
        android:layout_x="6dp"
        android:layout_y="11dp"
        android:src="@drawable/water" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="9dp"
        android:layout_y="160dp"
        android:src="@drawable/diet" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_x="74dp"
        android:layout_y="181dp"
        android:text="@string/foodtxt"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="248dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="14dp"
        android:layout_x="73dp"
        android:layout_y="320dp"
        android:text="@string/exersicetxt"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="49dp"
        android:layout_marginTop="32dp"
        android:layout_x="77dp"
        android:layout_y="296dp"
        android:text="@string/exersice"
        android:textColor="#a60808" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="6dp"
        android:layout_y="308dp"
        android:src="@drawable/dumbbell" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_x="76dp"
        android:layout_y="426dp"
        android:text="@string/sleeptxt"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="6dp"
        android:layout_y="421dp"
        android:src="@drawable/sleeping" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_x="76dp"
        android:layout_y="160dp"
        android:text="@string/food"
        android:textColor="#a60808" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_x="78dp"
        android:layout_y="406dp"
        android:text="@string/sleep"
        android:textColor="#a60808" />

</AbsoluteLayout>