<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".after" >

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="10dp"
        android:layout_y="260dp"
        android:text="@string/who3txt"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="10dp"
        android:layout_y="115dp"
        android:text="@string/titletxt"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_x="3dp"
        android:layout_y="29dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceSmallInverse"
        android:textColor="#a60808"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="10dp"
        android:layout_y="155dp"
        android:text="@string/whotxt"
        android:textColor="#fff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="258dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="21dp"
        android:layout_x="10dp"
        android:layout_y="330dp"
        android:text="@string/who2txt"
        android:textColor="#fff"
        android:textSize="14sp" />

</AbsoluteLayout>