<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AbsoluteLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/profile1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".after" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_x="77dp"
        android:layout_y="180dp"
        android:text="@string/heavytxt"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_x="77dp"
        android:layout_y="150dp"
        android:text="@string/heavy"
        android:textColor="#a60808" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="199dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_x="77dp"
        android:layout_y="295dp"
        android:text="@string/bandagetxt"
        android:textColor="#fff" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_x="77dp"
        android:layout_y="270dp"
        android:text="@string/bandage"
        android:textColor="#a60808" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="208dp"
        android:layout_height="40dp"
        android:layout_x="71dp"
        android:layout_y="55dp"
        android:text="@string/watertxt"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="60dp"
        android:layout_height="94dp"
        android:layout_marginTop="14dp"
        android:layout_x="-2dp"
        android:layout_y="20dp"
        android:src="@drawable/water" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="19dp"
        android:layout_x="71dp"
        android:layout_y="30dp"
        android:text="@string/water"
        android:textColor="#a60808" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="2dp"
        android:layout_y="156dp"
        android:src="@drawable/work" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_x="4dp"
        android:layout_y="300dp"
        android:src="@drawable/plaster" />

</AbsoluteLayout>